@@ -1,4 +1,4 @@
 update triggers set comments='' where comments is null;
-alter table triggers modify comments blob DEFAULT '' NOT NULL;
+alter table triggers modify comments blob NOT NULL;
 
 alter table triggers add type integer DEFAULT '0' NOT NULL;
